--- a/pup_osas_website/admin_index.html
+++ b/pup_osas_website/admin_index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>PUP OSAS Admin Page</title>
+    <title>PUPBC OSAS Admin Page</title>
     <link rel="stylesheet" href="css/admin_nav_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
   </head>
