--- a/pup_osas_website/user_notif.html
+++ b/pup_osas_website/user_notif.html
@@ -14,11 +14,11 @@
     <label for="click" class="menu-btn">
         <i class="fas fa-bars"></i>
     </label>
-    <ul>
-        <li><a href="user_index.html">Home</a></li>
-        <li><a class="active" href="user_notif.html">Notification</a></li>
-        <li><a href="user_servi.html">Services</a></li>
-        <li><a href="user_acc.html">User</a></li>
+    <ul class="nav_item">
+        <li class="nav_bttn"><a href="user_index.html">Home</a></li>
+        <li class="nav_bttn"><a href="user_servi.html">Services</a></li>
+        <li class="nav_bttn"><a class="active" href="#">Notification</a></li>
+        <li class="nav_bttn"><a href="user_acc.html">User</a></li>
     </ul>
     </nav>
     <div class="content">
