same lang, nagdagdag lang ng codes
nagdagdag lang ng bagong codes

--- a/pup_osas_website/user_index.html
+++ b/pup_osas_website/user_index.html
@@ -19,8 +19,8 @@
     <ul class="nav_item">
         <li class="nav_bttn"><a class="active" href="user_index.html">Home</a></li>
         <li class="nav_bttn"><a href="user_servi.html">Services</a></li>
-
-        <li class="nav_bttn" onclick="toggleNotifi()" ><a href="#">Notification</a></li>
+        <li class="nav_bttn1"><a href="user_notif.html">Notification</a></li>
+        <li class="nav_bttn2" onclick="toggleNotifi()" ><a href="#">Notification</a></li>
 
         <div class="notifi-box" id="box">
 			<li class="bttn"><a class="btn" href="user_notif.html">See All</a></li>
