may kunting laman, kaso wala pang logic sa user
may kunting laman, kaso wala pang logic sa user

--- a/pup_osas_website/user_acc.html
+++ b/pup_osas_website/user_acc.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>User | PUPBC OSAS</title>
     <link rel="stylesheet" href="css/nav_style.css">
+	<link rel="stylesheet" href="css/user_acc.css">
     <link rel="stylesheet" href="css/user_nofi_dd.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,14 +60,45 @@
         <li class="nav_bttn"><a class="active" href="user_acc.html">User</a></li>
     </ul>
     </nav>
-    <div class="content">
-        <div>
-            
+	
+    <section class="content">
+		<form id="studentInfo" action="#">
+		<h2>Profile</h2>
+        <div class="top-box top-box-a">
+            <div>
+				<h5>Student No</h5>
+				<input type="text" id="stud_ID" name="#" placeholder="Student No" readonly>
+			</div>
+			<div>
+				<h5>Student Name</h5>
+				<input type="text" id="stud_ID" name="#" placeholder="Student Full Name" readonly>
+			</div>
+			<div>
+				<h5>Course</h5>
+				<input type="text" id="stud_ID" name="#" placeholder="Course" readonly>
+			</div>
+			<div>
+				<h5>Year</h5>
+				<input type="text" id="stud_ID" name="#" placeholder="#" readonly>
+			</div>
         </div>
-        <div>
-            
-        </div>
-    </div>
+        <div class="top-box top-box-b">
+            <div>
+				<h5>Address</h5>
+				<input type="text" id="stud_ID" name="#" placeholder="Address" readonly>
+			</div>
+			<div>
+				<h5>Email Address</h5>
+				<input type="text" id="stud_ID" name="#" placeholder="Email" readonly>
+			</div>
+			<div>
+				<h5>Contact Number</h5>
+				<input type="text" id="stud_ID" name="#" placeholder="Contact Number" readonly>
+			</div>
+        </div> 
+		
+		</form>
+    </section>
 
     <script src="js/user_noti.js"></script>
 </body>
