--- a/pup_osas_website/user_index.html
+++ b/pup_osas_website/user_index.html
@@ -60,16 +60,15 @@
         <li class="nav_bttn"><a href="user_acc.html">User</a></li>
     </ul>
     </nav>
+
     <section class="content">
-        <div>
-            <div class="top-box top-box-a">
-                <h4> Be a Member of IBITS!</h4>
-                <p class="price"> ₱100 </p>
-                <a href="#" class="btn" id="modalBtn"> REGISTER </a>
-            </div>
-            <div class="top-box top-box-b">
-            </div> 
+        <h2>Home</h2>
+        <div class="top-box top-box-a">
+            
         </div>
+        <div class="top-box top-box-b">
+            
+        </div> 
     </section>
 
     <script src="js/user_noti.js"></script>
