additional code for signup n login in user
additional code for signup n login in user

--- a/pup_osas_website/user_register.html
+++ b/pup_osas_website/user_register.html
@@ -14,23 +14,39 @@
         <form action="#">
           <div class="row">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="First Name" required>
+            <input type="text" id="stud_ID" name="#" placeholder="First Name" required>
           </div>
           <div class="row">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="Last Name" required>
+            <input type="text" id="stud_ID" name="#" placeholder="Last Name" required>
           </div>
           <div class="row">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="Email" required>
+            <input type="text" id="stud_ID" name="#" placeholder="Student Number" required>
+          </div>
+          <div class="row">
+            <i class="fas fa-user"></i>
+            <input type="text" id="stud_ID" name="#" placeholder="Email" required>
+          </div>
+          <div class="row">
+            <i class="fas fa-user"></i>
+            <input type="text" id="stud_ID" name="#" placeholder="Username" required>
           </div>
           <div class="row">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" required>
+            <input type="password" id="stud_ID" name="#" placeholder="Password" required>
           </div>
           <div class="row">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Confirm Password" required>
+            <input type="password" id="stud_ID" name="#" placeholder="Confirm Password" required>
+          </div>
+          <div class="row">
+            <i class="fas fa-user"></i>
+            <input type="text" id="stud_ID" name="#" placeholder="Contact Number" required>
+          </div>
+          <div class="row">
+            <i class="fas fa-user"></i>
+            <input type="text" id="stud_ID" name="#" placeholder="Guardian" required>
           </div>
           <div class="row button">
             <input type="button" value="Signup" onclick="location.href='user_index.html';">
