--- a/pup_osas_website/user_login.html
+++ b/pup_osas_website/user_login.html
@@ -14,11 +14,11 @@
         <form action="#">
           <div class="row">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="Email" required>
+            <input type="text" id="stud_ID" name="#" placeholder="Username" required>
           </div>
           <div class="row">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" required>
+            <input type="password" id="stud_ID" name="#" placeholder="Password" required>
           </div>
           <div class="pass"><a href="#">Forgot password?</a></div>
           <div class="row button">
