may kasamang modal logout pati admin merun na

--- a/pup_osas_website/admin_acc.html
+++ b/pup_osas_website/admin_acc.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>PUP OSAS Admin Page</title>
     <link rel="stylesheet" href="css/admin_nav_style.css">
+    <link rel="stylesheet" href="css/admin_acc.css">
+    <link rel="stylesheet" href="css/logout_modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
   </head>
   <body>
@@ -25,8 +27,63 @@
         </ul>
       </nav>
     </div>
-    <div class="content">
-      
+    <section class="content">
+      <form id="studentInfo" action="#">
+      <h2>Profile</h2>
+          <div class="top-box top-box-a">
+              <div>
+          <h5>Student No</h5>
+          <input type="text" id="stud_ID" name="#" placeholder="Student No" readonly>
+        </div>
+        <div>
+          <h5>Student Name</h5>
+          <input type="text" id="stud_ID" name="#" placeholder="Student Full Name" readonly>
+        </div>
+        <div>
+          <h5>Course</h5>
+          <input type="text" id="stud_ID" name="#" placeholder="Course" readonly>
+        </div>
+        <div>
+          <h5>Year</h5>
+          <input type="text" id="stud_ID" name="#" placeholder="#" readonly>
+        </div>
+          </div>
+          <div class="top-box top-box-b">
+              <div>
+          <h5>Address</h5>
+          <input type="text" id="stud_ID" name="#" placeholder="Address" readonly>
+        </div>
+        <div>
+          <h5>Email Address</h5>
+          <input type="text" id="stud_ID" name="#" placeholder="Email" readonly>
+        </div>
+        <div>
+          <h5>Contact Number</h5>
+          <input type="text" id="stud_ID" name="#" placeholder="Contact Number" readonly>
+        </div>
+          </div> 
+      <div class="top-box">
+        <a href="#" class="btn" id="bttnEdit">Edit</a>
+        <a href="#" class="btn" id="bttnLogOut">Log Out</a>
+      </div>
+    </section>
+
+    <div id="modalLogOut" class="logOutModal">
+      <div class="modalContent">
+        <div class="modalHeader">
+          <button type="button" class="closeBtn" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modalBody">
+          <h2>Are you sure you want to Log out?</h2>
+        </div>
+        <div class="modalFooter">
+          <button type="button" class="btn btn-cancel" data-dismiss="modal">No</button>
+              <button type="button" class="btn btn-logout" onclick="location.href='user_login.html';">Yes</button>
+        </div>
+      </div>
     </div>
+  
+    <script src="js/modalLogout.js"></script>
+    
   </body>
 </html>
