--- a/pup_osas_website/user_acc.html
+++ b/pup_osas_website/user_acc.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/nav_style.css">
 	<link rel="stylesheet" href="css/user_acc.css">
     <link rel="stylesheet" href="css/user_nofi_dd.css">
+	<link rel="stylesheet" href="css/logout_modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -96,10 +97,28 @@
 				<input type="text" id="stud_ID" name="#" placeholder="Contact Number" readonly>
 			</div>
         </div> 
-		
-		</form>
+		<div class="top-box">
+			<a href="#" class="btn" id="bttnEdit">Edit</a>
+			<a href="#" class="btn" id="bttnLogOut">Log Out</a>
+		</div>
     </section>
 
+	<div id="modalLogOut" class="logOutModal">
+		<div class="modalContent">
+			<div class="modalHeader">
+				<button type="button" class="closeBtn" data-dismiss="modal">&times;</button>
+			</div>
+			<div class="modalBody">
+				<h2>Are you sure you want to Log out?</h2>
+			</div>
+			<div class="modalFooter">
+				<button type="button" class="btn btn-cancel" data-dismiss="modal">No</button>
+        		<button type="button" class="btn btn-logout" onclick="location.href='user_login.html';">Yes</button>
+			</div>
+		</div>
+	</div>
+
+	<script src="js/modalLogout.js"></script>
     <script src="js/user_noti.js"></script>
 </body>
 </html>
