nagdagdag ng container sa admin site
nagdagdag ng container sa admin site

--- a/pup_osas_website/user_servi.html
+++ b/pup_osas_website/user_servi.html
@@ -5,6 +5,7 @@
     <title>Service | PUPBC OSAS</title>
     <link rel="stylesheet" href="css/nav_style.css">
 	<link rel="stylesheet" href="css/user_nofi_dd.css">
+	<link rel="stylesheet" href="css/user_serv.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -59,15 +60,15 @@
         <li class="nav_bttn"><a href="user_acc.html">User</a></li>
     </ul>
     </nav>
-    <div class="content">
-		<h2>Services</h2>
-        <div>
+    <section class="content">
+        <h2>Service</h2>
+        <div class="top-box top-box-a">
             
         </div>
-        <div>
+        <div class="top-box top-box-b">
             
-        </div>
-    </div>
+        </div> 
+    </section>
 
 	<script src="js/user_noti.js"></script>
 </body>
